[tool.poetry]
name = "git-speed"
version = "1.1.1"
description = "Installs Git aliases."
authors = ["Daniel Tipping <daniel@gitscientist.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://www.gitscientist.com"
repository = "https://github.com/git-scientist/git-speed"

[tool.poetry.dependencies]
python = "^3.6"
typer = "^0.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.770"
pytype = {version = "^2020.4.1", python = ">=3.6,<3.8"}

[tool.poetry.scripts]
git-speed = "git_speed.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
